[tool.poetry]
name = "ds-toy"
version = "0.1.0"
description = ""
authors = ["Luis Herrmann"]
readme = "README.md"
packages = [{include = "ds_toy"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
ipykernel = "^6.22.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
